--- a/src/app/feedback-dialog/feedback-dialog.component.html
+++ b/src/app/feedback-dialog/feedback-dialog.component.html
@@ -9,7 +9,7 @@
     </div>
 
     <button type="button" class="card__close" (click)="onClose()" aria-label="關閉">
-      <span class="material-symbols-rounded">close</span>
+      <mat-icon>close</mat-icon>
     </button>
   </div>
 
