--- a/src/app/scheduling/scheduling.component.html
+++ b/src/app/scheduling/scheduling.component.html
@@ -54,7 +54,7 @@
 </div>
 
 <div *ngIf="viewMode === 'dashboard'">
-  <div class="dashboard-row" style="margin-top: 100px !important">
+  <div class="dashboard-row">
     <div class="left-col">
       <div class="chat-card"> 
       <div class="chat-box" #chatBox>
