--- a/src/app/announcement-dialog/announcement-dialog.component.html
+++ b/src/app/announcement-dialog/announcement-dialog.component.html
@@ -4,10 +4,16 @@
       <mat-icon>cancel</mat-icon>
     </button>
   </div>
-
+<!-- 
   <div class="notice-header-bar">
     <h2 class="notice-title">📢 通知佈告欄</h2>
-  </div>
+  </div> -->
+  <div class="notice-header-bar">
+  <h2 class="notice-title">
+    <img src="/laba.png" alt="通知圖示" class="notice-icon" />
+    通知佈告欄
+  </h2>
+</div> 
 
   <div class="tabs">
     <button class="tab-btn" [class.active]="currentTab==='public'" (click)="switchTab('public')">
