--- a/src/app/pre-schedule-dialog/pre-schedule-dialog.component.html
+++ b/src/app/pre-schedule-dialog/pre-schedule-dialog.component.html
@@ -2,7 +2,7 @@
 
   <div class="dialog-header">
     <button mat-icon-button (click)="closeAndRefresh()">
-      <mat-icon>cancel</mat-icon>
+      <mat-icon>close</mat-icon>
     </button>
   </div>
   
